alcuni test in prova + aggiunto nuovo dataset

--- a/dataset/dataset_merger_stats.ipynb
+++ b/dataset/dataset_merger_stats.ipynb
@@ -167,6 +167,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trasforma JL-Corpus in formato per EVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import os \n",
+    "import codecs\n",
+    "dataset = open(\"../../StarGANv2-EmotionalVC/dataset/eng/jl.csv\",\"w\")\n",
+    "dataset.write(\"dataset;lang;path;actor_id;gender;emotion;statement_id\\n\")\n",
+    "\n",
+    "for file in open(\"../file.txt\",\"r\").readlines():\n",
+    "    nome_file = file.strip()\n",
+    "    corpo_utile = file.split(\".\")[0]\n",
+    "    informazioni = corpo_utile.split(\"_\")\n",
+    "    emozione = informazioni[1]\n",
+    "    if emozione == \"angry\":\n",
+    "        emozione = \"anger\"\n",
+    "    if emozione not in [\"anger\",\"sad\",\"happy\",\"neutral\"]:\n",
+    "        continue\n",
+    "    frase = informazioni[2]\n",
+    "    gender = informazioni[0][:-1]\n",
+    "    id_attore = informazioni[0][-1]\n",
+    "    \n",
+    "    dataset.write(f\"jl;eng;../StarGANv2-EmotionalVC/dataset/eng/JL/{nome_file};{id_attore};{gender};{emozione};{frase}\\n\")\n",
+    "\n",
+    "dataset.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -653,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct 21 2022, 23:50:54) \n[GCC 11.2.0]"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
